Use monospace font for plain text messages, fix some spacing

--- a/skins/elastic/styles/widgets/mail.less
+++ b/skins/elastic/styles/widgets/mail.less
@@ -105,7 +105,12 @@
 
 .message-part,
 .message-htmlpart {
-    // TODO
+    padding-top: .5rem;
+
+    &:not(:first-child) {
+        border-top: 1px solid lighten(@color-mail-headers, 50%);
+        margin-top: .5rem;
+    }
 
     div.rcmBody {
         // Remove margins that can be set by the mail message styles
@@ -176,11 +181,15 @@
     span.sig {
         color: @color-mail-signature;
     }
+
+    div.pre {
+        font-family: monospace;
+    }
 }
 
 .message-partheaders {
     padding: .5rem 0;
-    margin: .5rem 0;
+    margin: .5rem 0 0 0;
     font-size: 90%;
     border-top: 1px solid lighten(@color-mail-headers, 50%);
     border-bottom: 1px solid lighten(@color-mail-headers, 50%);
@@ -194,5 +203,11 @@
 
     .subject {
         font-weight: bold;
+    }
+
+    & + .message-part,
+    & + .message-htmlpart {
+        border-top: 0;
+        margin: 0;
     }
 }
