--- a/skins/elastic/styles/widgets/messages.less
+++ b/skins/elastic/styles/widgets/messages.less
@@ -49,7 +49,6 @@
 
 .ui.alert {
     margin: 0;
-    margin-bottom: .2em;
     opacity: .95;
     float: left;
     width: 100%;
@@ -62,12 +61,17 @@
     align-items: center;
 
     @media screen and (max-width: @screen-width-xs) {
-        margin-bottom: 0;
         box-shadow: none;
         border: 0;
         border-top: 2px solid #fff;
         border-radius: 0;
         min-height: 4.2rem;
+    }
+
+    @media screen and (min-width: (@screen-width-xs + 1px)) {
+        &:not(:last-child) {
+            margin-bottom: .2rem;
+        }
     }
 
     span {
